--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-  <title>New Orleans</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css" type="text/css" />
-</head>
-<body>
-<div class="stage">
-
-  <div class="credits">
-    <ul>
-      <li>Illustration: Mel Shields</li>
-      <li>Concept &amp; front-end development: Tessa Harmon</li>
-    </ul>
-  </div>
-</div>
-</body>
-</html>
+<!DOCTYPE html html(lang="en")><html><head><title>CSSDevConf 2014 Parade!</title></head><body></body></html>
